DEP: add mockito to deps